portfolio updated with certificates

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <h1>Portfolio</h1>
         </div>
     </header>
-    <a href="./home.html"  class="home">Home</a>
+    <a href="./index.html"  class="home">Home</a>
     <main class="proj-display">
         <div class="sec-back">
             <section class="sec-1">
