--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         <h1>Projects</h1>
         </div>
     </header>
-    <a href="./home.html"  class="home">Home</a>
+    <a href="./index.html"  class="home">Home</a>
     <main class="proj-display">
         <div class="sec-back">
             <section class="sec-1">
