--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="projects.html" class="link">Projects</a></li>
                     <li><a href="https://github.com/vmskhan" class="link">GitHub</a></li>
-                    <li><a href="#" class="link">Resume</a></li>
+                    <li><a href="./images/certificates/pdfs/RESUME-IBM-Shahbaaz.pdf" class="link">Resume</a></li>
                 </ul>
                 <a href="#contact" class="btn button link">Contact</a>
            </div>
